--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </body>
 	<script>
 		window.onload=function(){
-			window.location.href="tpl/reg.html"
+			window.location.href="tpl/login.html"
 		}
 	</script>
 </html>
