--- a/tpl/login.html
+++ b/tpl/login.html
@@ -3,11 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>logiin</title>
+	<style>
+		.content{width: 400px;height: auto;position: relative;left: 0;right: 0;top: 0;bottom: 0;border: 1px solid #222222;}
+		label{width: 60px;display: inline-block;}
+	</style>
 </head>
 <body>
 	<div class="content">
 		<h2>用户登录</h2>
-		<form action="../manage/reg.php" method="POST">
+		<form action="../manage/login.php" method="POST">
 			<p class="">
 				<label for="uname">用户名:</label>
 				<input type="text" id="uname" name="uname">	
