--- a/tpl/login.html
+++ b/tpl/login.html
@@ -20,7 +20,10 @@
 				<label for="upwd">密码:</label>
 				<input type="password" id="upwd" name="upwd">	
 			</p>
-			<p><input type="submit" value="提交"></p>
+			<p>
+				<input type="submit" value="提交">
+				<a href="reg.html"><input type="button" value="注册"></a>
+			</p>
 		</form>	
 	</div>	
 </body>
