--- a/tpl/login.html
+++ b/tpl/login.html
@@ -25,6 +25,7 @@
 				<a href="reg.html"><input type="button" value="注册"></a>
 			</p>
 		</form>	
+		<a href="../manage/listUsers.php"><button>显示所有用户</button></a>
 	</div>
 
 </body>
