--- a/tpl/reg_new.html
+++ b/tpl/reg_new.html
@@ -33,11 +33,23 @@
 		</div>
 		<div class="blankcol"></div>
 		<div class="blankcol"></div>
-		<div class="btn-group btn-group-justified" role="group" aria-label="...">
+		<div class="row">
+			<div class="col-md-4"></div>
+			<div class="col-md-4">
+				<div class="btn-group btn-group-justified">
+					<div class="btn-group">
+						<button type="button" class="btn btn-default">注册</button>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4"></div>
+		</div>
+
+		<!-- <div class="btn-group btn-group-justified" role="group" aria-label="...">
 			<div class="btn-group">
 				<button type="button" class="btn btn-default">注册</button>
 			</div>
-		</div>
+		</div> -->
 	</div>
 </body>
 </html>
