--- a/tpl/login_new.html
+++ b/tpl/login_new.html
@@ -34,14 +34,27 @@
 		<div class="blankcol"></div>
 		<div class="blankcol"></div>
 		<div class="blankcol"></div>
-		<div class="btn-group btn-group-justified" role="group" aria-label="...">
+
+		<div class="row">
+			<div class="col-md-4 col-md-offset-2">
+				<div class="btn-group">
+					<button type="button" class="btn btn-default btn-login">登录</button>
+				</div>
+			</div>
+			<div class="col-md-4 col-md-offset-2">
+				<div class="btn-group">
+					<a href="reg_new.html"><button type="button" class="btn btn-default">注册</button></a>
+				</div>
+			</div>
+		</div>
+		<!-- <div class="btn-group btn-group-justified" role="group" aria-label="...">
 			<div class="btn-group">
 				<button type="button" class="btn btn-default btn-login">登录</button>
 			</div>
 			<div class="btn-group">
 				<a href="reg_new.html"><button type="button" class="btn btn-default">注册</button></a>
 			</div>
-		</div>
+		</div> -->
 	</div>
 </body>
 </html>
