--- a/tpl/login_new.html
+++ b/tpl/login_new.html
@@ -36,29 +36,18 @@
 		<div class="blankcol"></div>
 
 		<div class="row">
-			<div class="col-md-4">
-				<div class=".btn-group.btn-group-justified">
-					<div class="btn-group">
-						<button type="button" class="btn btn-default btn-login">登录</button>
-					</div>
+			<div class="col-md-3"></div>
+			<div class="col-md-3">
+				<div class="btn-group ">
+					<button type="button" class="btn btn-default btn-login">登录</button>
 				</div>
-			</div>
-			<div class="col-md-4">
-				<div class="btn-group btn-gtoup-justified">
-					<div class="btn-group">
-						<a href="reg_new.html"><button type="button" class="btn btn-default">注册</button></a>
-					</div>
+			</div>	
+			<div class="col-md-3 col-md-offset-1">
+				<div class="btn-group">
+					<a href="reg_new.html"><button type="button" class="btn btn-default">注册</button></a>
 				</div>
 			</div>
 		</div>
-		<!-- <div class="btn-group btn-group-justified" role="group" aria-label="...">
-			<div class="btn-group">
-				<button type="button" class="btn btn-default btn-login">登录</button>
-			</div>
-			<div class="btn-group">
-				<a href="reg_new.html"><button type="button" class="btn btn-default">注册</button></a>
-			</div>
-		</div> -->
 	</div>
 </body>
 </html>
