--- a/tpl/login_new.html
+++ b/tpl/login_new.html
@@ -50,4 +50,6 @@
 		</div>
 	</div>
 </body>
+	<script src="../assets/js/jquery.min.js" ></script>
+	<script src="../assets/js/bootstrap.js" ></script>
 </html>
