--- a/tpl/login.html
+++ b/tpl/login.html
@@ -5,7 +5,7 @@
 	<title>logiin</title>
 	<style>
 		.content{width: 400px;height: auto;position: relative;left: 0;right: 0;top: 0;bottom: 0;border: 1px solid #222222;}
-		label{width: 60px;display: inline-block;}
+		label{width: 70px; display: inline-block;}
 	</style>
 </head>
 <body>
@@ -20,6 +20,7 @@
 				<label for="upwd">密码:</label>
 				<input type="password" id="upwd" name="upwd">	
 			</p>
+			<p><input type="checkbox" id="remme"><label for="remme">记住密码</label></p>
 			<p>
 				<input type="submit" value="提交">
 				<a href="reg.html"><input type="button" value="注册"></a>
